feat: added functionality to add clients to the scheduler to send second message to

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -24,37 +24,8 @@
       </button>
     </mat-card-title>
 
-    <div class="scroll location-layout"
-         *ngIf="this.appointment">
-      <div *ngFor="let location of this.appointment.location">
-        <div *ngFor="let local of getObjectKeys(location)">
-          <div class="location-title">
-            <h3><b>{{ local }} ({{getNumOfClients(location)}})</b></h3>
-            <hr>
-          </div>
-          <div *ngFor="let clientArr of getObjectValue(location)"
-               class="client-cards-container">
-            <mat-card *ngFor="let client of clientArr"
-                      class="client-card">
-              <mat-card-header style="display: flex;
-              padding: 0 !important;
-              justify-content: flex-end;
-              width: 10em;">
-                <mat-icon matTooltip="{{client.active ? 'Deactivate Client' : 'Activate Client'}}"
-                          style="cursor: pointer;"
-                          [ngClass]="{'mat-success-btn': client.active, 'mat-danger-btn': !client.active}"
-                          (click)="updateStatus(client._id, !client.active, local)">{{client.active
-                  ?
-                  "mark_email_read" : "unsubscribe"}}</mat-icon>
-
-              </mat-card-header>
-              <mat-icon>pets</mat-icon>{{client.petName}}
-              <mat-icon>face</mat-icon>{{client.petParentName}}
-            </mat-card>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-appointment-client-list [appointment]="this.appointment"
+                                 [addToList]='false'></app-appointment-client-list>
   </mat-card>
 
   <mat-card class="reply-list">
