feat: added filter to find clients in the client reply panel

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-client-list/appointment-client-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-client-list/appointment-client-list.component.html
@@ -41,7 +41,20 @@
   </ng-container>
 
   <ng-container *ngIf="this.addToList">
-    <div *ngFor="let location of this.petsWithLocations">
+    <form [formGroup]="queryForm">
+      <mat-form-field appearance="outline"
+                      style="width: 100%;">
+        <mat-label>Search for a client</mat-label>
+
+        <input type="text"
+               name="clientQuery"
+               formControlName="clientQuery"
+               matInput
+               (ngModelChange)="filterList()" />
+      </mat-form-field>
+    </form>
+
+    <div *ngFor="let location of this.filteredList">
       <div *ngFor="let local of getObjectKeys(location)">
         <div class="location-title">
           <h3><b>{{ local }} ({{getNumOfClients(location)}})</b></h3>
