feat: displayed all routes in the home page and added panel service to display the route editor

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -72,7 +72,7 @@
                   multiple>
 
         <mat-option *ngFor="let option of options"
-                    [value]="option">{{ option }}</mat-option>
+                    [value]="option._id">{{ option.name }}</mat-option>
       </mat-select>
     </mat-form-field>
 
