--- a/frontend/barks-and-bubbles-frontend/src/app/components/route-editor/route-editor.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/route-editor/route-editor.component.html
@@ -16,9 +16,9 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-          <mat-label>Locations for Routes</mat-label>
+          <mat-label>Locations for Route</mat-label>
           <mat-select formControlName="serviceAreas"
-                      placeholder="Select a location"
+                      placeholder="Select locations"
                       multiple>
 
             <mat-option *ngFor="let area of serviceAreas"
