--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
@@ -18,7 +18,7 @@
 
     <mat-form-field appearance="outline">
       <mat-select formControlName="locationQuery"
-                  placeholder="Select a location"
+                  placeholder="Select locations"
                   multiple
                   (selectionChange)="filterList()">
 
