--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -1,14 +1,14 @@
 <div class="layout"
      (click)="this.togglePanel($event, true)">
   <mat-card class="message-list">
-    <mat-card-title>
-      <h2 *ngIf="this.appointment && this.appointment.app && this.appointment.app.date"
-          [innerHTML]="this.DataService.formatDate(this.appointment.app.date ,false, false)">TITLE</h2>
+    <mat-card-title
+                    *ngIf="this.appointment && this.appointment.app && this.appointment.app.date && this.appointment.app.route">
+      <h2>{{this.appointment.app.route.name}}:&nbsp;</h2>
+      <h2 [innerHTML]="this.DataService.formatDate(this.appointment.app.date ,false, false)">TITLE PLACEHOLDER</h2>
       <button mat-icon-button
               color="primary"
               matTooltip="Send Appointment Texts"
               (click)="openPanel()"
-              *ngIf="this.appointment && this.appointment.app"
               [disabled]="this.appointment.app.messages && this.appointment.app.messages.sentDate">
         <mat-icon>
           <span class="material-symbols-outlined">
