--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -3,7 +3,7 @@
   <mat-card class="message-list">
     <mat-card-title
                     *ngIf="this.appointment && this.appointment.app && this.appointment.app.date && this.appointment.app.route">
-      <h2>{{this.appointment.app.route.name}}:&nbsp;</h2>
+      <h2>{{this.appointment.app.route.name}}&nbsp;</h2>
       <h2 [innerHTML]="this.DataService.formatDate(this.appointment.app.date ,false, false)">TITLE PLACEHOLDER</h2>
       <button mat-icon-button
               color="primary"
