fix: added condition in appointment list for when to show an appointment and removed overflow for p elements in the appointment cards

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
@@ -8,7 +8,7 @@
     <mat-icon>{{!archivedDisplayed? 'history': 'event_upcoming'}}</mat-icon>
   </button>
 </div>
-<div *ngIf="filteredAppointments.length"
+<div *ngIf="filteredAppointments && filteredAppointments.length"
      class="appointments-layout">
   <mat-card *ngFor="let app of filteredAppointments"
             (click)="viewAppointment(app)">
