--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
@@ -16,33 +16,52 @@
   </button>
 
   <button mat-icon-button
-          matTooltip="Send Reply Texts"
-          (click)="openPanel()">
+          matTooltip="View scheduler editor"
+          (click)="panelType = 'scheduler'"
+          [color]="'accent'">
     <mat-icon class="mat-accent-icon-btn">
-      outgoing_mail
+      event_note
     </mat-icon>
   </button>
 
   <button mat-icon-button
           matTooltip="Add reply to scheduler"
-          (click)="showAddPanel = !showAddPanel"
+          (click)="panelType = 'clients'"
           [color]="'primary'">
     <mat-icon>
       maps_ugc
     </mat-icon>
   </button>
+
+  <button mat-icon-button
+          matTooltip="Send Reply Texts"
+          (click)="openPanel()"
+          [color]="'accent'">
+    <mat-icon class="mat-accent-icon-btn">
+      outgoing_mail
+    </mat-icon>
+  </button>
+
+
 </div>
 
 <div class="add-reply-panel-layout scroll"
-     *ngIf="showAddPanel">
+     *ngIf="panelType == 'clients'">
   <h3>Add a pet to the replies:</h3>
   <app-appointment-client-list [appointment]="this.appointment"
                                [addToList]='true'></app-appointment-client-list>
 
 </div>
 
+<div class="add-reply-panel-layout no-scroll"
+     *ngIf="panelType == 'scheduler'">
+  <app-scheduler-editor [route]="this.appointment.app.route"
+                        [hours]="this.hours"
+                        [app]="this.appointment.app"></app-scheduler-editor>
+</div>
+
 <div class="layout"
-     (click)="showAddPanel = false">
+     (click)="panelType = ''">
   <div (dragover)="onDragOver($event)"
        (touchmove)="onDragOver($event)"
        (drop)="onDrop($event, null)"
@@ -89,7 +108,8 @@
           <mat-card *ngFor="let message of filterByTime(reply[key].replies, '')"
                     draggable="true"
                     (dragstart)="onDragStart(message)"
-                    (touchstart)="onDragStart(message)">
+                    (touchstart)="onDragStart(message)"
+                    [ngClass]="{'default-time': !message.defaultTime}">
             <mat-card-title style="height: 0em"></mat-card-title>
             <mat-card-content>
               <div class="reply-layout">
@@ -145,7 +165,8 @@
         <mat-card *ngFor="let message of filterByTime(this.replies, hour)"
                   draggable="true"
                   (dragstart)="onDragStart(message)"
-                  (touchstart)="onDragStart(message)">
+                  (touchstart)="onDragStart(message)"
+                  [ngClass]="{'default-time': !message.defaultTime}">
           <mat-card-title align="end"
                           style="height: 0em">
 
