fix: fixed issue where message background color wasn't changing when the message was scheduled outside the default time

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
@@ -206,6 +206,12 @@ mat-card {
   cursor: move;
   height: 11em;
   width: 14em;
+  overflow: hidden !important;
+  position: relative;
+}
+
+.no-time-msg {
+  margin-bottom: 1em;
 }
 
 .longer-msg {
