--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
@@ -102,13 +102,14 @@
           <div cdkDropListGroup
                cdkDropList
                [cdkDropListData]="[filterByTime(reply[key].replies, '')]"
-               (cdkDropListDropped)="drop($event, null)"
+               (cdkDropListDropped)="drop($event)"
                (mouseenter)="this.hoveredTime= null"
                (touchend)="this.hoveredTime= null">
 
             <mat-card *ngFor="let message of filterByTime(reply[key].replies, '')"
-                      [ngClass]="{'default-time': !message.defaultTime}"
+                      [ngClass]="{'not-default-time': !message.defaultTime}"
                       cdkDrag
+                      class="no-time-msg"
                       [cdkDragData]="[message, null]">
               <mat-card-title style="height: 0em"></mat-card-title>
               <mat-card-content>
@@ -158,7 +159,7 @@
          cdkDropList
          [cdkDropListData]="[filterByTime(this.replies, hour)]"
          cdkDropListConnectedTo="{{hour}}"
-         (cdkDropListDropped)="drop($event, hour)"
+         (cdkDropListDropped)="drop($event)"
          (mouseenter)="this.hoveredTime= hour"
          (touchend)="this.hoveredTime= hour">
       <h3>{{hour}}</h3>
@@ -166,7 +167,7 @@
         <mat-card *ngFor="let message of filterByTime(this.replies, hour)"
                   cdkDrag
                   [cdkDragData]="[message, hour]"
-                  [ngClass]="{'default-time': !message.defaultTime}">
+                  [ngClass]="{'not-default-time': !message.defaultTime}">
           <mat-card-title align="end"
                           style="height: 0em">
 
